smap/public/stylesheets/style.css
/* Bunger, Liao, Marcinko, Regier, Robinson */

/************************************************************************/
/* Template for new element styling:
    [tag, class, id]
        /* Positioning and Display */
        /* Borders */
        /* Coloring */
        /* Fonts and Text */
        /* Animation */
        /* Other */
/************************************************************************/

/* CSS imports: Not useful for javascript, so commented out in this file */

/* This is the stylesheet that contains the primary colors for the theme selector */
/* @import url("./themes/master-theme-sheet.css"); */

/* All the themes */
/* @import url("./themes/light/orange-red-theme.css"); */
/* @import url("./themes/light/green-blue-theme.css"); */
/* @import url("./themes/light/pink-purple-theme.css"); */
/* @import url("./themes/dark/dark-red-theme.css"); */
/* @import url("./themes/dark/dark-blue-theme.css"); */
/* @import url("./themes/dark/dark-green-theme.css"); */


/************************/
/***  Global Styling  ***/
/************************/

html {
    background-color: var(--color-light);
}


body {
    /* Positioning and Display */
    margin: 0px;
    /* Fonts and Text */
    font-family: var(--font-sans);
    color: var(--color-dark);
}

/*******************************/
/***  App Container Styling  ***/
/*******************************/

#app-container {
    background-color: var(--color-light);
}

/******************************/
/***  Settings Bar Styling  ***/
/******************************/

#settings {
    /* Coloring */
    background-color: var(--group-color);
    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.35);
    /* Fonts and Text */
    text-align: center;
}


/************************/
/***  Slider Styling  ***/
/************************/

.statistic-slider-container {
    /* Positioning and Display */
    display: grid;
    grid-template-columns: [remove-statistic-guide]7% [stat-option-title]86% [metadata]7%;
	/* grid-template-rows: [slider-title]auto [slider-slider]34% [slider-ticks]30%; */
    grid-template-areas:
        "slider-remover slider-title slider-metadata"
        "slider-remover slider slider"
		"slider-remover ticks ticks"
    ;
    align-self: start;
    margin-bottom: 4px;
    padding: 8px;
    /* Coloring */
    background-color: var(--subgroup-color);
}

.statistic-slider-container:hover {
    /* Coloring */
    background-color: var(--subgroup-color-lighter);
}

.statistic-slider-remover {
    /* Positioning and Display */
    grid-area: slider-remover;
    align-items: center;
    /* Fonts and Text */
    font-size: 32px;
    /* Other */
    cursor: pointer;
    user-select: none;
}

.statistic-slider-title {
    /* Positioning and Display */
    grid-area: slider-title;
    justify-content: center;
    padding-left: 10px;
    padding-top: 5px;
    padding-bottom: 5px;
    overflow-wrap: break-word;
}

.statistic-slider-metadata {
    /* Positioning and Display */
    grid-area: slider-metadata;
    align-items: center;
    padding-right: 4px;
    /* Fonts and Text */
    font-size: 18px;
    /* Other */
    cursor: help;
    user-select: none;
}

.statistic-slider {
    /* Positioning and Display */
    display: grid;
    grid-area: slider;
    height: 10px;
    margin-bottom: 10px;
    margin-top: 10px;
    width: auto;
    /* Borders */
    border: 2px solid var(--accent-color);
    border-radius: 8px;
    /* Coloring */
    background: linear-gradient(to right, var(--color-light) 0%, var(--accent-color-light) 100%);
    box-shadow: 0px 0px 2px inset var(--secondary-color-light);
    /* Other */
    -webkit-appearance: none !important;
    width: auto;
}

/*EXTERNAL CITATION
https://css-tricks.com/styling-cross-browser-compatible-range-inputs-css/
Thumbs are hard to come by, but this site knows how to style them
*/
.statistic-slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  border: 1px solid #000000;
  height: 10px;
  width: 10px;
  border-radius: 8px;
  background: #ffffff;
  cursor: pointer;
 }

/* All the same stuff for Firefox */
.statistic-slider::-moz-range-thumb {
  -webkit-appearance: none;
  border: 1px solid #000000;
  height: 10px;
  width: 10px;
  border-radius: 8px;
  background: #ffffff;
  cursor: pointer;
}

/* All the same stuff for IE */
.statistic-slider::-ms-thumb {
  -webkit-appearance: none;
  border: 1px solid #000000;
  height: 8px;
  width: 8px;
  border-radius: 8px;
  background: #ffffff;
  cursor: pointer;
}

.statistic-slider-tick-container {
    /* Positioning and Display */
    grid-area: ticks;
	justify-content: space-evenly;
    width: 100%;
    margin-top: -5px;
    display: grid;
    grid-template-columns:[begin]2% [tick-1]1% [between-tick]23% [tick-2]1% [between-tick]23% [tick-3]1% [between-tick]23% [tick-4]1% [between-tick]23% [tick-5]1% [end]2%;
    grid-template-rows: auto;
    grid-template-areas:
        "before-tick tick-1 between-1 tick-2 between-2 tick-3 between-3 tick-4 between-4 tick-5 end"
    ;
}

.statistic-slider-tick-container p {
    /* Positioning and Display */
	justify-content: center;
    text-align: center;
	height: 8px;
    margin-top: 0px;
    width: 1.66px;
    /* Coloring */
    background: var(--color-dark);
    /* Fonts and Text */
	font-size: 12px;
    line-height: 35px;
    display: grid;
}

.single-ticks-1 {
    grid-area: tick-1;
}

.single-ticks-2 {
    grid-area: tick-2;
    margin-left: 2px;
}

.single-ticks-3 {
    grid-area: tick-3;
}

.single-ticks-4 {
    grid-area: tick-4;
    margin-left: -2px;
}

.single-ticks-5 {
    grid-area: tick-5;
}

#statistics-sliders-header {
    /* Positioning and Display */
    grid-area: sliders-header;
    display: grid;
    align-items: center;
    /* Coloring */
    background-color: var(--accent-color-light);
    box-shadow: 0px 0px 30px inset var(--secondary-color-light);
    /* Fonts and Text */
    font-size: 24px;
    text-shadow: 0px 0px 8px var(--color-light);
    font-weight: bold;
}
/* ... */

